Закомментировать карточки товаров

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Abito</title>
     <link rel="stylesheet" href="./style.css" />
+    <script src="./script.js" defer></script>
   </head>
   <body>
     <header class="header">
@@ -49,7 +50,8 @@
               <h2 class="content-main__title">Рекомендации для вас</h2>
 
               <div class="content-main__list">
-                <a href="product.html" class="content-main__list-item">
+
+                <!-- <a href="product.html" class="content-main__list-item">
                   <div class="content-main__list-item--img">
                     <img src="./image/card-img.png" alt="card-img" />
                   </div>
@@ -180,7 +182,7 @@
                       10 июля 11:39
                     </span>
                   </div>
-                </a>
+                </a> -->
               </div>
             </div>
 
@@ -206,8 +208,6 @@
                   </div>
                 
                 </div>
-
-                
 
                 <div class="content-side__footer">
                     <p class="content-side__footer--item">© ООО «Абито», 2011–2021</p>
